<?xml version="1.0"?>
<package format="2">
  <name>ASV_messages</name>
  <version>0.1.0</version>
  <description>Package that contains all ASV ROS message definitions</description>

  <maintainer email="uc2013171665@student.uc.pt">Andre Santos</maintainer>

  <license>TODO</license>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
